--- a/src/styles/anim.css
+++ b/src/styles/anim.css
@@ -1,7 +1,12 @@
 .fadeOut{animation: fadeOut 0.5s ease-out forwards;}
+.fadeIn{animation: fadeIn 0.5s ease-out forwards;}
 
 
 @keyframes fadeOut {
     from{opacity: 1;}
     to{opacity: 0;}
+}
+@keyframes fadeIn {
+    from{opacity: 0;}
+    to{opacity: 1;}
 }
