--- a/src/styles/anim.css
+++ b/src/styles/anim.css
@@ -1,5 +1,7 @@
 .fadeOut{animation: fadeOut 0.5s ease-out forwards;}
 .fadeIn{animation: fadeIn 0.5s ease-out forwards;}
+.resize_sm{animation: resize_sm 0.5s ease-in-out forwards;}
+.resize_lg{animation: resize_lg 0.5s ease-in-out forwards;}
 
 
 @keyframes fadeOut {
@@ -9,4 +11,12 @@
 @keyframes fadeIn {
     from{opacity: 0;}
     to{opacity: 1;}
+}
+@keyframes resize_sm {
+    from{height: 100vh; width: 100vw;}
+    to{height: 80vh; width: 80vw;}
+}
+@keyframes resize_lg {
+    from{height: 80vh; width: 80vw;}
+    to{height: 100vh; width: 100vw;}
 }
