--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@
   }
 body {
     background-color: #E8E6E2;
-    
+    overflow-x: hidden;
+    user-select: none;
 }
 
 .fo_t {
@@ -31,3 +32,30 @@ body {
 .sm_ooth {
     transition: all 0.5s ease;
 }
+.about:hover {
+  width: 30px;
+  height: 230px;
+}
+
+.about:hover::after {
+  content: 'About';
+  transform: rotate(90deg);
+}
+
+.gradient {
+  background: linear-gradient(to bottom, #e8e6e28a 0%, rgba(245, 163, 142, 0.8) 70%, rgba(142, 245, 238, 0.235) 100%) 100% ;
+  width: 100%;
+  height: 100%;
+}
+.gradient_gal {
+  background: linear-gradient(to right, rgba(245, 163, 142, 0.8), rgba(142, 245, 238, 0.8));
+  width: 100%;
+  height: 100%; 
+}
+
+.gradient_cont {
+  background: linear-gradient(to bottom, rgba(142, 245, 238, 0.235), rgba(142, 245, 238, 0.8));
+  width: 100%;
+  height: 100vh;
+}
+
