--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 body {
     background-color: #E8E6E2;
     overflow-x: hidden;
+    -webkit-user-select: none;
     user-select: none;
 }
 
@@ -47,8 +48,14 @@ body {
   width: 100%;
   height: 100%;
 }
-.gradient_gal {
+.gradient_gal, .grad_powered-by {
   background: linear-gradient(to right, rgba(245, 163, 142, 0.8), rgba(142, 245, 238, 0.8));
+}
+.hover_grad:hover {
+  background: linear-gradient(to right,rgba(142, 245, 238, 0.8), rgba(245, 163, 142, 0.8));
+
+}
+.gradient_gal{
   width: 100%;
   height: 100%; 
 }
@@ -58,4 +65,11 @@ body {
   width: 100%;
   height: 100vh;
 }
+
+.gradient_foot {
+  background: linear-gradient(to bottom, rgba(142, 245, 238, 0.8), rgba(245, 163, 142, 0.8));
+  width: 100%;
+  height: 100%;
+}
+
 
