--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,24 +8,19 @@
     --headlineSmall: clamp(0.6rem, 0.75vw, 1.3rem);
     --spacing: clamp(0.9rem, 0.75vw, 1.3rem);
   }
-  
-  .scroll-section-outer {
-    /* overflow-x: hidden; */
-  }
-  
-  .scroll-section-inner {
-    height: 100vh;
-    width: 400vw;
-    display: flex;
-    flex-direction: row;
-    position: relative;
-  }
+
+/* 
+    .scroll-section-inner {
+      width: 400vw;
+      display: flex;
+      flex-direction: row;
+      position: relative;
+    }
+
+
   
   .scroll-section {
     height: 100vh;
     width: 100vw;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
   }
-  
+   */
