--- a/src/index.css
+++ b/src/index.css
@@ -44,14 +44,14 @@ body {
 }
 
 .gradient {
-  background: linear-gradient(to bottom, #e8e6e28a 0%, rgba(245, 163, 142, 0.8) 70%, rgba(142, 245, 238, 0.235) 100%) 100% ;
+  background: linear-gradient(to bottom, #e8e6e28a 0%, rgba(108, 132, 238, 0.247) 25%, rgba(108, 132, 238, 0.459) 50%, rgba(142, 245, 238, 0.235) 100%) 100% ;
   width: 100%;
   height: 100%;
 }
-.gradient_gal, .grad_powered-by {
+.gradient_gal {
   background: linear-gradient(to right, rgba(245, 163, 142, 0.8), rgba(142, 245, 238, 0.8));
 }
-.hover_grad:hover {
+.hover_grad:hover, .gradient_foot {
   background: linear-gradient(to right,rgba(142, 245, 238, 0.8), rgba(245, 163, 142, 0.8));
 
 }
@@ -61,15 +61,14 @@ body {
 }
 
 .gradient_cont {
-  background: linear-gradient(to bottom, rgba(142, 245, 238, 0.235), rgba(142, 245, 238, 0.8));
+  background: linear-gradient(to bottom, rgba(142, 245, 238, 0.235), rgba(121, 124, 79, 0.164));
   width: 100%;
   height: 100vh;
 }
 
 .gradient_foot {
-  background: linear-gradient(to bottom, rgba(142, 245, 238, 0.8), rgba(245, 163, 142, 0.8));
-  width: 100%;
-  height: 100%;
+  background: linear-gradient(to bottom, rgba(121, 124, 79, 0.164), #e8e6e28a);
 }
+
 
 
