--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ body {
 }
 
 .gradient {
-  background: linear-gradient(to bottom, #e8e6e28a 0%, rgba(108, 132, 238, 0.247) 25%, rgba(108, 132, 238, 0.459) 50%, rgba(142, 245, 238, 0.235) 100%) 100% ;
+  background: linear-gradient(to bottom, #e8e6e28a 0%, rgba(108, 132, 238, 0.247) 25%, rgba(108, 132, 238, 0.459) 50%, #e8e6e28a) 100% ;
   width: 100%;
   height: 100%;
 }
@@ -61,7 +61,7 @@ body {
 }
 
 .gradient_cont {
-  background: linear-gradient(to bottom, rgba(142, 245, 238, 0.235), rgba(121, 124, 79, 0.164));
+  /* background-color: #e8e6e28a; */
   width: 100%;
   height: 100vh;
 }
