--- a/src/styles/anim.css
+++ b/src/styles/anim.css
@@ -13,15 +13,43 @@
     to{opacity: 1;}
 }
 @keyframes resize_sm {
-    from{height: 100vh; width: 100vw;}
-    to{height: 80vh; width: 80vw;}
+    from{height: 100vh; width: 100vw; max-width: 1800px;}
+    to{height: 80vh; width: 80vw; max-width: 1400px;}
 }
 @keyframes resize_lg {
-    from{height: 80vh; width: 80vw;}
-    to{height: 100vh; width: 100vw;}
+    from{height: 80vh; width: 80vw; max-width: 1400px;}
+    to{height: 100vh; width: 100vw; max-width: 1800px;}
 }
 /* @keyframes rotate_left {
     from{transform: rotateY(0);}
     to{transform: rotateY(100deg)}
     
 } */
+
+.circle {
+    width: 100px;
+    height: 100px;
+    background-color: #3498db;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    transition: height 0.7s ease;
+  }
+  
+  .text {
+    display: none;
+    transition: opacity 0.5s ease;
+  }
+  
+  .circle:hover {
+    height: 80px;
+    width: 30px;
+  }
+  
+  .circle:hover .text {
+    display: block;
+    opacity: 1;
+  }
