--- a/src/styles/anim.css
+++ b/src/styles/anim.css
@@ -2,6 +2,8 @@
 .fadeIn{animation: fadeIn 0.5s ease-out forwards;}
 .resize_sm{animation: resize_sm 0.5s ease-in-out forwards;}
 .resize_lg{animation: resize_lg 0.5s ease-in-out forwards;}
+.resize_sm_phone{animation: resize_sm_phone 0.5s ease-in-out forwards;}
+.resize_lg_phone{animation: resize_lg_phone 0.5s ease-in-out forwards;}
 /* .rotate_left{animation: rotate_left 0.5s ease forwards;} */
 
 @keyframes fadeOut {
@@ -19,6 +21,16 @@
 @keyframes resize_lg {
     from{height: 80vh; width: 80vw; max-width: 1400px;}
     to{height: 100vh; width: 100vw; max-width: 1800px;}
+}
+
+
+@keyframes resize_sm_phone {
+  from{height: 100vh; width: 100vw; max-width: 1800px;}
+  to{height: 90vh; width: 90vw; max-width: 1400px;}
+}
+@keyframes resize_lg_phone {
+  from{height: 90vh; width: 90vw; max-width: 1400px;}
+  to{height: 100vh; width: 100vw; max-width: 1800px;}
 }
 /* @keyframes rotate_left {
     from{transform: rotateY(0);}
