--- a/src/index.css
+++ b/src/index.css
@@ -53,12 +53,17 @@ body {
 }
 
 .gradient_cont {
-  /* background-color: #e8e6e28a; */
-  width: 100%;
-  height: 100vh;
+  background-color: #e8e6e28a;
+}
+
+@media screen and (min-width: 640px) {
+  .gradient_cont {
+    width: 100%;
+    height: 100vh;
+  }
 }
 
 .gradient_foot {
-  background: linear-gradient(to bottom, rgba(121, 124, 79, 0.164), #e8e6e28a);
+  background: linear-gradient(to bottom, #e8e6e28a , rgba(121, 124, 79, 0.164));
 }
 
